--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "title": "Learn more about the upcoming conference.",
     "veevaCode": "US-002794",
-    "veevaDate": "08/2023"
+    "veevaDate": "08/2023",
+    "widthDesktop": 610
 }
