Before & After template

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Learn more about the upcoming conference.",
+    "title": "MVP Event Emails - Before",
     "veevaCode": "US-002794",
     "veevaDate": "09/2023",
     "widthDesktop": 610
